syntax = "proto3";

option java_package = "com.liflymark.schedule.data";
option java_multiple_files = true;

message Settings {
  // 默认0-纯色，1-渐变色
  int32 color_mode = 1;

  // 默认值0 翻译为70dp，设置其他值将不会处理，是多少就是多少
  int32 course_per_height = 2;

  // 在夜间模式是否显示背景
  bool dark_show_back = 3;

  // 时间列颜色 默认黑色-暂时弃用
  int64 time_line_color = 4;

  // 星期行颜色 默认黑色-暂时弃用
  int64  week_row_color = 5;

  // 显示右下角作业本 0-不显示 1-样式1
  int32 show_right = 6;

  // 成绩详情的缓存
  string score_detail = 7;

  // 课程格子-课程字体大小 默认值0 转换为13sp
  float course_name_font_size = 8;

  // 课程格子-老师字体大小 默认值0 转换为10sp
  float course_teacher_font_size = 9;

  // 课程格子-Border宽度 默认值0 即为0
  float course_border_size = 10;

  // 课程格子-Border颜色 0即为Color.White
  int64 course_border_color = 11;

  // 公告显示
  int32 app_main_notice = 12;

  // 课程格子-是否显示老师
  bool show_teacher_or_not = 13;

  // 课程格子-透明度 默认值0 转换为0.75
  float course_card_alpha = 14;

  // 课程格子-border透明度 默认值0 转换为50
  int32 course_border_alpha = 15;

  // 颜色列表
  repeated twoColorItem colors= 16;

  // 获取开屏公告的日期
  string last_update = 17;

  // 课程格子-圆角半径Dp.value,默认值4F
  float course_card_radius = 18;

  // 课程表-时间列等颜色
  sfixed32 timetable_icon_color = 19;

  // 是否开启课程通知
  bool open_course_notice = 20;
}


message  twoColorItem{
  repeated string colorItem = 1;
}